src/test/ui/compile-fail-migration/borrowck/borrowck-move-out-of-static-item.ast.stderr
error[E0507]: cannot move out of static item
  --> $DIR/borrowck-move-out-of-static-item.rs:28:10
   |
LL |     test(BAR); //[ast]~ ERROR cannot move out of static item [E0507]
   |          ^^^ cannot move out of static item

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
